master gap fixes

--- a/3/style3.css
+++ b/3/style3.css
@@ -386,8 +386,16 @@ nav .list__item a.list__link_active:focus::after {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-  column-gap: 10px;
-  row-gap: 10px;
+  gap: 10px;
+}
+
+@supports not (gap: 10px) {
+  .work .work__container {
+    margin: -5px;
+  }
+  .work .work__container > * {
+    margin: 5px;
+  }
 }
 
 .container__items {
@@ -550,7 +558,16 @@ main .link a {
   width: 50%;
   display: flex;
   flex-direction: column;
-  row-gap: 10px;
+  gap: 10px;
+}
+
+@supports not (gap: 10px) {
+  .conditions__wrap_right {
+    margin: -5px;
+  }
+  .conditions__wrap_right > * {
+    margin: 5px;
+  }
 }
 
 .conditions__wrap_item {
